fix: remove scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,10 @@
   background-color: #222;
 }
 
+.scrollable-container::-webkit-scrollbar {
+  display: none;
+}
+
 .crit {
   position: relative;
   font-size: 13px;
